Last version (I hope)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ArragementApp</string>
+    <string name="app_name">Eldøy Kulturpark</string>
     <string name="title_placeholder">Funker dette?</string>
     <string name="description_placeholder">Description</string>
     <string name="arr_info_placeholder">desc</string>
